# CodeCoach-

./: .gitignore  CMakeLists.txt  CodeCoach+.cpp  PROJECT_PLAN.md  README.md
.cache/clangd/index/: AddEntryDialog.cpp.293A2B2C9138E59E.idx  AddEntryDialog.h.0B1BD03BAC72C0A0.idx  BrowseWidget.cpp.C999FE05AE019DD0.idx  BrowseWidget.h.AE00F61B385862F9.idx  Database.cpp.8BF345D10A91E2B8.idx  Database.h.E0224B788301EA74.idx  DetailWidget.cpp.9952B3A40AD89474.idx  DetailWidget.h.C2D241EE6784D8ED.idx  EntryFactory.cpp.0C11C69EFCB15282.idx  EntryFactory.h.05FBA8F13B8FC6CF.idx  ImageAnalyzer.cpp.00DD20CD27E160EB.idx  ImageAnalyzer.h.4BA4197D00C663D4.idx  MainWindow.cpp.119F62BEB8182E4A.idx  MainWindow.h.20EB4A8D22000F14.idx  Model.h.B40BAE94B51253C6.idx  PayloadRenderer.cpp.E34F82338B940C71.idx  PayloadRenderer.h.8FCB5315A6DD71FD.idx  Repository.cpp.99A6C1832353A7A0.idx  Repository.h.D65BA1660BFEE9FE.idx  Validation.cpp.9FFB5B5B47EDA4FF.idx  Validation.h.EC6469DD81B79523.idx  analyze_image.cpp.EA3F3B7DAF75573E.idx  main.cpp.31938C78D32157A6.idx  main_ui.cpp.4AD84EB7785AA5DB.idx
backend/: CMakeLists.txt  Database.cpp  Database.h  EntryFactory.cpp  EntryFactory.h  ImageAnalyzer.cpp  ImageAnalyzer.h  Model.h  Repository.cpp  Repository.h  Validation.cpp  Validation.h
schemas/: pixelpad.schema.json  scratch.schema.json  unity.schema.json
src/: CMakeLists.txt  analyze_image.cpp  main.cpp
ui/: AddEntryDialog.cpp  AddEntryDialog.h  BrowseWidget.cpp  BrowseWidget.h  CMakeLists.txt  DetailWidget.cpp  DetailWidget.h  MainWindow.cpp  MainWindow.h  PayloadRenderer.cpp  PayloadRenderer.h  main_ui.cpp  resources.qrc
